# nitro_type_coverage

./: .clangd  .gitignore  .metadata  LIMITATIONS.md  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: integration_tests.yml  memory_leak.yml
android/: build.gradle  consumer-rules.pro  gradle.properties
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: type_coverage_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  models.dart
example/lib/sections/: async_execution.dart  callbacks.dart  collections.dart  enums_structs.dart  error_handling.dart  hybrid_records.dart  multi_param_sync.dart  nullable_primitives_sync.dart  primitives_sync.dart  properties.dart  special_features.dart  streams_backpressure.dart  typed_data.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: nitro_type_coverage.podspec
ios/Classes/: NitroTypeCoverageImpl.swift  SwiftNitroTypeCoveragePlugin.swift  nitro_type_coverage.bridge.g.h  nitro_type_coverage.bridge.g.mm  nitro_type_coverage.bridge.g.swift  nitro_type_coverage.c  nitro_type_coverage.cpp
ios/nitro_type_coverage/: Package.swift
lib/: nitro_type_coverage.dart  nitro_type_coverage_bindings_generated.dart
lib/src/: nitro_type_coverage.g.dart  nitro_type_coverage.native.dart
linux/: CMakeLists.txt
linux/src/: HybridNitroTypeCoverage.cpp
macos/: nitro_type_coverage.podspec
macos/Classes/: NitroTypeCoverageImpl.swift  SwiftNitroTypeCoveragePlugin.swift  nitro_type_coverage.bridge.g.h  nitro_type_coverage.bridge.g.mm  nitro_type_coverage.bridge.g.swift
macos/nitro_type_coverage/: Package.swift
scripts/: native_leak_check.sh  run_tests.sh
scripts/native_leak_check/: main.cpp
src/: CMakeLists.txt  HybridNitroTypeCoverage.cpp  dart_api_dl.c  nitro_type_coverage.c  nitro_type_coverage.cpp
windows/: CMakeLists.txt
windows/src/: HybridNitroTypeCoverage.cpp
(+10 files in other folders)
